# AfterSchoolSurvivorsForTakgyun

./: .gitignore  CLAUDE.md  LICENSE  README.md  demo_first-move.py  demo_main.py  demo_map_render.py  demo_mini_game.py  demo_mini_game2.py  demo_player_camera.py  demo_with_enemy.py  mypy.ini  pyproject.toml  requirements.txt  simple_demo.py  test_attack_speed_levelup.py
.claude/commands/: interview-for-unit-test.md  update-claude-md.md  write-command.md  write-rule.md  write-unit-test.md
.claude/rules/: AI_COMMENT_GUIDELINES.md  code-convention-rule.md  repository-code.md  unit-test-rule.md
.cursor/: mcp.json
.gemini/commands/: interview.md
.taskmaster/: config.json  state.json
.taskmaster/reports/: task-complexity-report.json
.taskmaster/tasks/: task_001.txt  task_002.txt  task_003.txt  task_004.txt  task_005.txt  task_006.txt  task_007.txt  task_008.txt  task_009.txt  task_010.txt  task_011.txt  task_012.txt  task_013.txt  task_014.txt  task_015.txt  task_016.txt  task_017.txt  task_018.txt  task_019.txt  task_020.txt  (+4 more)
data/: enemies.json  game_balance.json  items.json
docs/: DEV-PRD.md  DEV-PRDv0.2.md  DEV-PRDv0.3.md  DEV-PRDv0.4.md  MVP-PRD.md  PRD.md  PRDv0.1.md  design.md  design2.md  game-dependency.md  refactor-PRD.md  기획서.md
rule/: interview_rule.md
src/: interfaces.py
tests/: test_auto_attack_system.py  test_base_event.py  test_camera_based_transformer.py  test_camera_component.py  test_camera_coordinate_integration.py  test_camera_offset_changed_event.py  test_camera_system.py  test_collision_system.py  test_component_registry.py  test_coordinate_cache.py  test_coordinate_game_system_integration.py  test_coordinate_integration_scenarios.py  test_coordinate_manager.py  test_coordinate_system_integration.py  test_coordinate_transformer.py  test_core.py  test_data_loader.py  test_data_loader_validation.py  test_data_models.py  test_difficulty_manager.py  test_enemy_ai_chase_behavior.py  test_enemy_ai_system.py  test_enemy_component.py  test_enemy_death_event.py  test_enemy_spawner_system.py  test_entity_manager.py  test_entity_manager_korean.py  test_entity_render_system.py  test_event_bus.py  test_event_interfaces.py  test_event_types.py  test_events_integration.py  test_experience_component.py  test_experience_system.py  test_experience_ui_component.py  test_experience_ui_integration.py  test_experience_ui_system.py  test_fixed_timestep_consistency.py  test_game_loop.py  test_game_state_manager.py  (+18 more)
todo/: 25-07-10.md  25-07-17
(+107 files in other folders)
